# LessKarma

./: .gitignore  README.md  bubbles.py  karma_inflation.ipynb  karma_user_distribution.ipynb  pygameTemplate.py  pyproject.toml  test_post_scraping.json
data/lesswrong_2022-06-03_T11H07M/: post_scraping_sort-by-old_offset-10000_limit-250.json  post_scraping_sort-by-old_offset-1000_limit-250.json  post_scraping_sort-by-old_offset-10250_limit-250.json  post_scraping_sort-by-old_offset-10750_limit-250.json  post_scraping_sort-by-old_offset-11250_limit-250.json  post_scraping_sort-by-old_offset-11750_limit-250.json  post_scraping_sort-by-old_offset-1250_limit-250.json  post_scraping_sort-by-old_offset-1500_limit-250.json  post_scraping_sort-by-old_offset-2000_limit-250.json  post_scraping_sort-by-old_offset-2250_limit-250.json  post_scraping_sort-by-old_offset-2500_limit-250.json  post_scraping_sort-by-old_offset-2750_limit-250.json  post_scraping_sort-by-old_offset-29498_limit-250.json  post_scraping_sort-by-old_offset-3000_limit-250.json  post_scraping_sort-by-old_offset-3250_limit-250.json  post_scraping_sort-by-old_offset-3500_limit-250.json  post_scraping_sort-by-old_offset-3750_limit-250.json  post_scraping_sort-by-old_offset-4000_limit-250.json  post_scraping_sort-by-old_offset-4250_limit-250.json  post_scraping_sort-by-old_offset-4500_limit-250.json  post_scraping_sort-by-old_offset-4750_limit-250.json  (+22 more)
data_scraper/: download_data.py  download_posts.py  gql_schemas.py  load_data.py  utils.py
visualization/: pygameTemplate.py
