[tool.poetry]
name = "lesskarma"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL 3.0"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
